# RaidChecker

./: .gitignore  Cargo.toml  README.md  expansions.json  realms.json
.github/workflows/: build.yml
src/: expansion_update.rs  main.rs  settings_ui.rs  signups_ui.rs
src/checker/: armory_checker.rs  buff_checker.rs  check_player.rs  mod.rs  progress_checker.rs  raid_questions.rs  raid_sheet.rs  saved_checker.rs
src/config/: expansion_config.rs  last_raid.rs  mod.rs  realms.rs  settings.rs
