[package]
name = "RaidChecker"
version = "1.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.39"
eframe = "0.31.0"
egui = "0.31.0"
md5 = "0.7.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
scraper = "0.22.0"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }

serde_json = "1.0.139"
tokio = "1.43.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
